02 - Kubernetes/frontend-volume1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-volume
  labels:
    app: frontend-volume-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: aspnet
  template:
    metadata:
      labels:
        component: aspnet
    spec:
      containers:
        - name: container-volume
          image: pauloteam/pizzafrontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: meuvolume
              mountPath: "app/meuvolume"
      volumes:
        - name: meuvolume
          emptyDir: {}
