02 - Kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pizzafrontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: pizzafrontend
