02 - Kubernetes/sql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  type: NodePort
  ports:
    - protocol: TCP
      port: 1500
      targetPort: 1500
